fix: disable double-tap zoom on mobile

--- a/reset.css
+++ b/reset.css
@@ -23,6 +23,8 @@ button {
 
 button {
   all: unset;
+  /* disable double-tap zoom on mobile */
+  touch-action: manipulation;
 }
 
 textarea {
